# commonBird

./: .gitignore  README.html  README.md  birdreport.py  build.ps1  build.sh  build_linux.sh  build_mac.sh  build_win.ps1  changelog.md  cli.py  commonBird.spec  common_bird_app.tcss  jQuertAjax.js  main.py  package-lock.json  public_key.pem  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  result.json  setup.py  taxon_map_preview.py  test.py
.github/workflows/: build.yml
database/: birdreport_taxon_infos.json  ch4_to_eb_taxon_map.json  ebird_cn_hotspots.json  ebird_other_hotspots.json  location_map.json
src/: __init__.py
src/birdreport/: birdreport.py
src/cli/: app.py  birdreport.py  ebird.py  general.py
src/ebird/: ebird.py
src/structure/: checklist.py  observation.py
src/utils/: api_exceptions.py  consts.py  data.py  location.py  long_rsa.py  taxon.py  token.py
tests/: test_birdreport_api.py  test_ebird_api.py
