[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commonBird"
version = "0.1.0"
readme = "README.md"
description = "A TUI program for eBird and birdreport.cn users."
authors = [
    { name = "CK Rainbow", email = "nanashichi@proton.me" }
]
license = "MIT"
classifiers=[
    "Framework :: Textual",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandas",
    "PyExecJS",
    "textual",
    "httpx",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["textual-dev", "pyinstaller"]

[project.scripts]
run = "cli:main"

[tool.ruff]
ignore = ["E402"]
